--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "description": "bot for counting when a user says `# done` keeps track of accumulation per user keeps track of total for the channel",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^9.12.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
