Change `countDistinctDays` to use US/Pacific time zone when determining days by using the `moment-timzeone` library instead of native `Date`.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "discord.js": "^14.16.3"
+    "discord.js": "^14.16.3",
+    "moment-timezone": "^0.5.46"
   },
   "name": "dgg_bot",
   "description": "bot for counting when a user says `# done` keeps track of accumulation per user keeps track of total for the channel",
